# minecluster

./: .gitignore  README.md  mix.exs  run.bat  shell.nix
bindings/kotlin/: .gitignore  README.md
bindings/kotlin/gradle/: libs.versions.toml
config/: elisp.ex
gui+qt/: README.md  dune-project  minecluster-gui-qt.opam  shell.nix
gui+qt/src/: App.re  Controller.re  controller.ml  dune  program.ml  resources.qrc
gui+qt/src/config/: discover.ml
gui+tkinter/: app.py
gui+win/: App.xaml.cs  MainPage.xaml  MainWindow.xaml.cs  MineclusterGuiWin.csproj
gui+win/Properties/: launchSettings.json
gui/gtk/: dune-project
gui/qt/: README.md  minecluster-gui-qt.opam
gui/win/: App.xaml  MainPage.xaml.cs  MainWindow.xaml  Package.appxmanifest  app.manifest
lib/: app.ex  central.ex  cli.ex  fbapi.ex  hostClient.ex  node_and_agents.ex  plebClient.ex  stickyfingers.ex
